--- a/source/libraries/noble/.docs/classes/NobleScene.html
+++ b/source/libraries/noble/.docs/classes/NobleScene.html
@@ -93,7 +93,7 @@
 		<p> Do not copy this file as a template for your scenes. Instead, your scenes will extend this class.
  See <a href="../examples/SceneTemplate.lua.html">templates/SceneTemplate.lua</a> for a blank scene that you can copy and modify for your own scenes.
  If you are using <a href="http://github.com/NobleRobot/NobleEngine-ProjectTemplate">NobleEngine-ProjectTemplate</a>,
- see <code>scenes/ExampleScene.lua</code> for an implementation example.</p>
+ see <code>scenes/GameOver.lua</code> for an implementation example.</p>
 			<h3>Usage</h3>
 				<pre class="example">YourSceneName = {}
 class(&quot;YourSceneName&quot;).extends(NobleScene)
